form subbminer php fix

--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
                                             <div class="uui-form-button-wrapper">
                                                 <input type="submit" class="uui-button w-button" value="Отправить"/>
                                             </div>
-                                        </form>                                                                   
+                                        </form>
+                                          
 
                                         <div class="success-message-3 w-form-done">
                                             <div class="success-text">Thank you! Your submission has been received!</div>
@@ -366,7 +367,7 @@
                 touchpadSupport: true,
             })
         </script>
-        <script>
+        <!-- <script>
             // Обработка формы сообщений
             document.getElementById('wf-form-Contact-04-form').addEventListener('submit', function(event) {
                 event.preventDefault();
@@ -399,7 +400,6 @@
                     document.querySelector('.error-message-3').style.display = 'block';
                 });
             });
-            </script>
-            
+            </script> -->
     </body>
 </html>
