form subbminer php fix 3

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <div class="w-layout-grid uui-contact04_component">
                                     <div class="uui-contact04_form-wrapper w-form">
                                         
-                                        <form id="wf-form-Contact-04-form" name="wf-form-Contact-04-form" method="post" action="/api/save_form" class="uui-contact04_form">
+                                        <form id="wf-form-Contact-04-form" name="wf-form-Contact-04-form" method="post" action="save_form.php" class="uui-contact04_form">
                                             <div class="form-field-2col">
                                                 <div class="uui-form-field-wrapper">
                                                     <label for="name" class="uui-field-label">Ваше Имя и Фамилия</label>
