added loader nodemailer

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 display: none !important;
             }
         </style>
+        <script src="https://cdn.jsdelivr.net/npm/nodemailer@6.7.2/dist/nodemailer.min.js"></script>
     </head>
     <body>
         <section class="video-hero-section">
