--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="background-video">
-                    <img src="https://assets-global.website-files.com/642eb9006d7e2cf15e7664a9/664cc1f19e776dc402adc364_IMG_7438.JPG" loading="lazy" sizes="(max-width: 991px) 100vw, 40vw" srcset="https://assets-global.website-files.com/642eb9006d7e2cf15e7664a9/664cc1f19e776dc402adc364_IMG_7438-p-500.jpg 500w, https://assets-global.website-files.com/642eb9006d7e2cf15e7664a9/664cc1f19e776dc402adc364_IMG_7438-p-800.jpg 800w, https://assets-global.website-files.com/642eb9006d7e2cf15e7664a9/664cc1f19e776dc402adc364_IMG_7438-p-1080.jpg 1080w, https://assets-global.website-files.com/642eb9006d7e2cf15e7664a9/664cc1f19e776dc402adc364_IMG_7438-p-1600.jpg 1600w, https://assets-global.website-files.com/642eb9006d7e2cf15e7664a9/664cc1f19e776dc402adc364_IMG_7438.JPG 1667w" alt="" class="background-video"/>
+                    <img src="IMG_7436.JPG" loading="lazy" sizes="(max-width: 991px) 100vw, 40vw" srcset="IMG_7436.JPG 500w, IMG_7436.JPG 800w, IMG_7436.JPG 1080w, IMG_7436.JPG 1600w, IMG_7436.JPG 1667w" alt="" class="background-video"/>
                     <div data-w-id="f3427722-898e-d54d-f27f-2e6a8494cef0" style="opacity:0" class="div-block-15-copy">
                         <h1 class="heading-14-copy">
                             Эмиль &amp;<span class="text-span-10"></span>
