--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 >
     <head>
         <meta charset="utf-8" />
-        <title>Приглашение на свадьбу - Эмиль &amp;Елизавета</title>
+        <title>Приглашение на свадьбу - Эмиль &amp; Елизавета</title>
         <meta
             content="Приглашаем вас на свадьбу Эмиля и Елизаветы! Узнайте все подробности о торжестве, программе, месте проведения и подтвердите свое присутствие на нашем сайте."
             name="description"
@@ -578,7 +578,7 @@
                                             id="wf-form-Contact-04-form"
                                             name="wf-form-Contact-04-form"
                                             method="post"
-                                            action="https://formspree.io/f/xleqkvol"
+                                            action="https://formspree.io/f/mvoejodk"
                                             class="uui-contact04_form"
                                         >
                                             <div class="form-field-2col">
