--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                         class="div-block-15-copy"
                     >
                         <h1 class="heading-14-copy">
-                            Эмиль &amp;<span class="text-span-10"></span>
-                            Елизавета
+                            Эмиль &amp;<span class="text-span-10"> </span>&nbsp;Елизавета
                         </h1>
                         <div class="text-block-17-copy">27 ИЮЛЯ 2024</div>
                     </div>
@@ -142,7 +141,7 @@
                         class="div-block-15-copy"
                     >
                         <h1 class="heading-14-copy">
-                            Эмиль &amp;<span class="text-span-10"></span>
+                            Эмиль &amp;<span class="text-span-10"></span>&nbsp;
                             Елизавета
                         </h1>
                         <div class="text-block-17-copy">27 ИЮЛЯ 2024</div>
@@ -174,7 +173,7 @@
                             <br />С большим удовольствием приглашаем Вас на нашу свадьбу!
                         </p>
                         <div class="div-block-15">
-                            <h1 class="heading-14">Эмиль &amp;Елизавета</h1>
+                            <h1 class="heading-14">Эмиль &amp;&nbsp;Елизавета</h1>
                             <div class="text-block-17">27.07.24</div>
                         </div>
                     </div>
